-- code changed to reduce PMD errors + validation added in dateRangeValidion(....) method.
SVN-Revision: 9972